P4PU-385 adding user info feature
